# lemmy

./: Cargo.toml  README.md
ansible/: VERSION
api_tests/: package.json
api_tests/src/: shared.ts
config/: config.hjson
crates/api/: Cargo.toml
crates/api_common/: Cargo.toml
crates/api_crud/: Cargo.toml
crates/api_crud/src/: lib.rs
crates/api_crud/src/comment/: create.rs  delete.rs  update.rs
crates/api_crud/src/community/: create.rs  delete.rs  read.rs  remove.rs  update.rs
crates/api_crud/src/payment/: create.rs  update.rs
crates/api_crud/src/pipayment/: agree.rs  approve.rs  balance.rs  client.rs  create.rs  found.rs  key.rs  list.rs  login.rs  mod.rs  payment.rs  read.rs  register.rs  register_with_fee.rs  send.rs  update.rs  web3login.rs  web3signup.rs  withdraw.rs
crates/api_crud/src/post/: create.rs  list.rs  read.rs  update.rs
crates/api_crud/src/private_message/: create.rs  update.rs
crates/api_crud/src/site/: read.rs  update.rs
crates/api_crud/src/user/: create.rs  delete.rs  read.rs
crates/api_crud/src/web3/: ext.rs  mod.rs  web3login.rs  web3register.rs
crates/apub/: Cargo.toml
crates/apub_receive/: Cargo.toml
crates/db_queries/: Cargo.toml
crates/db_schema/: Cargo.toml
crates/db_views/: Cargo.toml
crates/db_views_actor/: Cargo.toml
crates/db_views_moderator/: Cargo.toml
crates/routes/: Cargo.toml
crates/utils/: Cargo.toml  build.rs
crates/websocket/: Cargo.toml
docker/prod/: docker-compose-uid.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2019-02-26-002946_create_user/: up.sql
migrations/2019-02-27-170003_create_community/: up.sql
migrations/2019-03-03-163336_create_post/: up.sql
migrations/2019-03-05-233828_create_comment/: up.sql
migrations/2019-03-30-212058_create_post_view/: up.sql
migrations/2019-04-03-155205_create_community_view/: up.sql
migrations/2019-04-03-155309_create_comment_view/: up.sql
migrations/2019-04-07-003142_create_moderation_logs/: up.sql
migrations/2019-04-29-175834_add_delete_columns/: down.sql  up.sql
migrations/2019-05-02-051656_community_view_hot_rank/: down.sql  up.sql
migrations/2019-08-11-000918_add_nsfw_columns/: down.sql  up.sql
migrations/2019-09-05-230317_add_mod_ban_views/: up.sql  (+1 more)
scripts/: combine-sql.sh  test.sh
src/: api_routes.rs  api_routes_http.rs  api_routes_websocket.rs  code_migrations.rs  lib.rs  pipayments_tasks.rs  scheduled_tasks.rs
(+239 files in other folders)
